# rgbd

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_admin.py  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 001_initial.py
app/: __init__.py  main.py
app/analytics/: __init__.py  plots.py
app/api/: __init__.py
app/api/routers/: __init__.py  analytics.py  auth.py  tasks.py  themes.py  users.py
app/core/: __init__.py  config.py  deps.py  security.py
app/db/: __init__.py  session.py  types.py
app/models/: __init__.py  history.py  task.py  theme.py  user.py
app/repositories/: __init__.py  history.py  tasks.py  themes.py  users.py
app/schemas/: __init__.py  analytics.py  auth.py  task.py  theme.py  user.py
app/services/: __init__.py  analytics.py  tasks.py  themes.py  users.py
tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_tasks.py  test_themes.py
